# arraystubs

./: .gitignore  LICENSE  pyproject.toml
src/arraystubs/: __init__.py  __init__.pyi  var_types.py  version.py  version.pyi
